src/styles/swiper.css
:root {
  --main-background: #5CDB95;
  --main-text: #FFFFFF;
  --alt-text: #05386B;
  --highlight: #379683;
  --grey-background: rgba(111,111,111,0.7);
  --light-highlight: #8EE4AF;
  --highlight-faded: rgba(55,150,99,0.4);
  --halfway: rgba(45, 103, 103, 0.7);
}

.swipeCardWrapper {
  position: relative;
  overflow: hidden;
  width: 300px;
  height: 300px;
}

.swipeDividerInvisible {
  position: absolute;
  display: none;
}

.swipeDivider {
  position: absolute;
  width: 5px;
  height: 100%;
  background-color: var(--alt-text);
  left: 0;
  will-change: left;
  z-index: 3;
}

.swipeCardLayerTop {
  position: absolute;
  background-color: var(--main-text);
  width: 50%;
  height: 100%;
  z-index: 2;
  overflow: hidden;
}

.swipeCardLayerBottom {
  position: absolute;
  background-color: var(--main-text);
  width: 100%;
  height: 100%;
  z-index: 1;
}

h1 {
  position: absolute;
  top: 10px;
  background-color: rgba(0, 0, 0, 0);
}

.goldStar {
  color: gold;
  font-size: 2rem;
}

.blackStar {
  color: black;
  font-size: 2rem;
}

.starRating {
  font-size: 2rem;
}

.wholeVertical {
  height: 100%;
}

.halfVertical {
  height: 50%;
  display: flex;
  align-items: center;
  justify-content: center;
  font-size: 2rem;
}

.flexRow {
  display: flex;
  justify-content: left;
  align-items: center;
  flex-wrap: wrap;
}

